[package]
name = "moka-cached-proc"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true


[dependencies]
quote = "1.0.6"
darling = "0.20.3"
proc-macro2 = "1.0.49"
syn = { version = "2.0.32", features = ["full"] }

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.84"
cold-moka = { path = "../moka-cached",  features = ["sync"] }
