[package]
name = "cold-moka"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moka-cached-proc  = {path = "../moka-cached-proc"}
moka = { version = "0.12.0",features = ["future"] }
once_cell = "1.8.0"

[features]
sync = ["moka/sync"]
